processed/gerrit/txt_full/34831.txt
Change:     34831
Subject:    LU-10026: Handle compression by server
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/34831
Change-Id:  I594d0cd42f0a99557518c87da5fd8f3344173f69
Project:    fs/lustre-release
Branch:     master
Status:     NEW
Owner:      Anna Fuchs
Created:    2019-05-08 19:05:37.000000000
Updated:    2020-01-17 16:05:03.000000000
Patch Set:  2
Insertions: +712
Deletions:  -110
Comments:   23 (0 unresolved)

--- Labels ---
  Code-Review: (no votes)
  Verified: jenkins: -1

--- Reviewers ---
  REVIEWER: Jenkins, Andreas Dilger, James Simmons, Sebastien Buisson, Patrick Farrell, Neil Brown

--- Commit Message ---
LU-10026: Handle compression by server

Either decompress data by server (previously compressed by client) and
store uncompressed or pass through compressed to ZFS. Passing through requires
patched ZFS version; for testing purposes commented out. Read unaffected.

Change-Id: I594d0cd42f0a99557518c87da5fd8f3344173f69
Test-Parameters: tests=sanity
Signed-off-by: Anna Fuchs <anna.fuchs@informatik.uni-hamburg.de>

--- Review History ---

--- Message (Anna Fuchs, 2019-05-08 19:05:37.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-05-08 19:07:44.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Jenkins, 2019-05-08 19:36:03.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/5055/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/64266/ : SUCCESS

--- Message (Autotest, 2019-05-08 19:37:20.000000000) ---
Patch Set 1:

Patch will not be tested because it is marked forbuildonly

--- Message (Andreas Dilger, 2019-05-10 08:49:20.000000000) ---
Patch Set 1:

(3 comments)

--- Message (Sebastien Buisson, 2019-05-27 16:09:59.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Anna Fuchs, 2020-01-17 15:08:05.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2020-01-17 15:09:59.000000000) ---
Patch Set 2:

(18 comments)

19 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-01-17 15:16:58.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_io.c:2061:2: error: initialization from incompatible pointer type [-Werror]
   .dbo_bufs_get   = osd_bufs_get,
   ^
 /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_io.c:2061:2: error: (near initialization for ‘osd_body_ops.dbo_bufs_get’) [-Werror]
 /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_io.c:2065:2: error: initialization from incompatible pointer type [-Werror]
   .dbo_write_commit  = osd_write_commit,
   ^
 /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_io.c:2065:2: error: (near initialization for ‘osd_body_ops.dbo_write_commit’) [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Lustre Gerrit Janitor, 2020-01-17 15:18:36.000000000) ---
Patch Set 2:

centos7: Compile failed

rhel8.0: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/5734/results.html

--- Message (jenkins, 2020-01-17 16:05:03.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/11214/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/71034/ : FAILURE
